# yzta-kobi-ai-project

./: .env.example  .gitignore  BACKEND_PLAN.md  LICENSE  ProjectDetailReadme.md  README.md  Services.md  backend_request_flow.md  docker-compose.yml  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  create_tables.py  entrypoint.sh  pyproject.toml  seed_db.py  test_kobi.py
backend/alembic/: env.py
backend/alembic/versions/: 259ee00e11f8_initial_tables.py  51ba577f6d32_notification_db_foundation.py  5942407a636b_create_inventory_table.py  a1b2c3d4e5f6_add_metadata_to_conversation_messages.py  a9c4d2e7f1b8_normalize_legacy_user_roles.py  b8e4f1a2c9d3_customer_direct_checkout_orders.py  d2f4a9b7c6e1_user_default_addresses.py  e7a1c2d3b4f5_seed_runs_metadata.py  f3b8c2d1e4a7_add_chat_history_tables.py
backend/app/: main.py
backend/app/agent/: context.py  memory.py  orchestrator.py  prompts.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  cookie.py  database.py  dependencies.py  exceptions.py  logger.py  openapi_examples.py  openapi_responses.py  rabbitmq_client.py  rate_limit.py  response_builder.py  responses.py  security.py  system_status.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/mappers/: inventory_mapper.py  notification_mapper.py
backend/app/models/: __init__.py  (+17 more)
backend/md/: BACKEND_PLAN.md  Backend_rule.md  auth_request_flow.md  backend_request_flow.md  notification.md
backend/scripts/: bootstrap_alembic.py  create_test_shipment.py  fix_data.py  seed_all.py  seed_data.py
(+161 files in other folders)
